@@ -1,3 +1,8 @@
+2006-07-10 Andrew J. Schorr <ajschorr@alumni.princeton.edu>
+
+	* ospf_packet.c: (ospf_hello) Improve NetworkMask mismatch warning
+	  message to include interface name and conflicting prefix lengths.
+
 2006-07-07 Paul Jakma <paul.jakma@sun.com>
 
 	* ospf_nsm.h: Add a NSM_Deleted neighbour state, to act as dummy
